# globalHometask2_2

./: .gitignore  CMakeLists.txt  README.md  loadabiity.cpp  loadability.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  other.cpp  other.h
headers/: loadability.h  other.h
src/: loadabiity.cpp  other.cpp
